--- a/gyxt-prj/pom.xml
+++ b/gyxt-prj/pom.xml
@@ -7,5 +7,6 @@
   <packaging>pom</packaging>
   <modules>
     <module>gyxt-commons</module>
+    <module>gyxt-server</module>
   </modules>
 </project>
