--- a/gyxt-prj/pom.xml
+++ b/gyxt-prj/pom.xml
@@ -8,5 +8,6 @@
   <modules>
     <module>gyxt-commons</module>
     <module>gyxt-server</module>
+    <module>gyxt</module>
   </modules>
 </project>
